ipc/ipdl/test/ipdl/ok/actorreturn.ipdl
sync protocol actorreturn {

parent:
    sync Msg(actorreturn p) returns (actorreturn r);

};
